--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 </head>
 
 <body>
-    <div class="titleContainer">
+<div class="titleContainer">
         <h1 class="title">Faster than <span class="greenTitle">green</span></h1>
-        <h2 clasS="subtitle">Tap the <span class="greenTitle">green</span> squares as fast as you can!</h2>
-        <h2 class="subtitle">Don't tap the <span class="redTitle">red</span> squares.</h2>
+        <h2 clasS="subtitle">Tap only the <span class="greenTitle">green</span>.</h2>
+        <h2 class="subtitle">Don't tap the <span class="redTitle">red</span>.</h2>
         <h2 class="subtitle">You have <span class="greenTitle">20</span> seconds.</h2>
-        <h2 class="subtitle">Press a square to <span class="greenTitle">start</span>.</h2>
     </div>
-    <div class="container">
+    <div class="speedContainer">
         <div class="gameContainer">
             <div class="infoRow">
                 <div id="debug" class="infoContainer">
