--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                     <div class="label">Score</div>
                     <div class="value" id="score">0</div>
                 </div>
+                <div class="infoContainer">
+                    <div class="label">High</div>
+                    <div class="value" id="highScore">0</div>
+                </div>
             </div>
             <!-- <div class="row">
                 <div>timer: </div>
