--- a/index.html
+++ b/index.html
@@ -5,12 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tapGame</title>
+    <title>FASTER THAN GREEN</title>
     <link rel="stylesheet" href="style/global.css">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/favicon">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="assets/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
-<div class="titleContainer">
+    <div class="titleContainer">
         <h1 class="title">Faster than <span class="greenTitle">green</span></h1>
         <h2 clasS="subtitle">Tap only the <span class="greenTitle">green</span>.</h2>
         <h2 class="subtitle">Don't tap the <span class="redTitle">red</span>.</h2>
@@ -32,15 +50,6 @@
                     <div class="value" id="highScore">0</div>
                 </div>
             </div>
-            <!-- <div class="row">
-                <div>timer: </div>
-                <div id="timer">20</div>
-            </div>
-            <div class="row">
-                <div>score: </div>
-                <div id="score">0</div>
-            </div> -->
-            <!-- <div id="finalScore">final score</div> -->
             <div id="gameContainer" class="gameContainer">
             </div>
             <div class="infoRow">
