--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon/manifest.json">
+    <link rel="manifest" href="manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="assets/favicon/ms-icon-144x144.png">
-<script>navigator.serviceWorker.register("tapGame/service-worker.js")</script> 
+    <script>navigator.serviceWorker.register("tapGame/service-worker.js")</script> 
     <meta name="theme-color" content="#ffffff">
 </head>
 
