--- a/index.html
+++ b/index.html
@@ -25,18 +25,49 @@
     <link rel="manifest" href="manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="assets/favicon/ms-icon-144x144.png">
-    <script>navigator.serviceWorker.register("tapGame/service-worker.js")</script> 
+    <script>navigator.serviceWorker.register("tapGame/service-worker.js")</script>
     <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
     <div class="titleContainer">
         <h1 class="title">Faster than <span class="greenTitle">green</span></h1>
+    </div>
+    <!--
+    <div id="menuContainer" class="menuContainer">
+        <div class="menu">
+            <div class="infoRow">
+                <div class="menuLabel infoContainer">
+                    <div class="label">Choose your gamemode</div>
+                </div>
+            </div>
+            <div class="infoRow">
+                <div id="speed" class="menuButtons infoContainer">
+                    <div class="label">Speed</div>
+                </div>
+                <div id="survival" class="menuButtons infoContainer">
+                    <div class="label">Survival</div>
+                </div>
+                <div id="battleRoyale" class="menuButtons infoContainer">
+                    <div class="label">Battle Royale</div>
+                </div>
+            </div>
+            <div class="infoRow">
+                <div class="menuButtons infoContainer">
+                    <div class="label">Credits</div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
+
+
+    <div id="speedDesc" class="speedSubtitleContainer">
         <h2 clasS="subtitle">Tap only the <span class="greenTitle">green</span>.</h2>
         <h2 class="subtitle">Don't tap the <span class="redTitle">red</span>.</h2>
         <h2 class="subtitle">You have <span class="greenTitle">20</span> seconds.</h2>
     </div>
-    <div class="speedContainer">
+    <div id="speedMode" class="speedContainer">
         <div class="gameContainer">
             <div class="infoRow">
                 <div id="debug" class="infoContainer">
@@ -61,6 +92,42 @@
             </div>
         </div>
     </div>
+
+
+    <!-- <div id="survivalDesc" class="speedSubtitleContainer">
+        <h2 clasS="subtitle">Tap only the <span class="greenTitle">green</span>.</h2>
+        <h2 class="subtitle">Don't tap the <span class="redTitle">red</span>.</h2>
+        <h2 class="subtitle">You have <span class="greenTitle">20</span> seconds.</h2>
+    </div>
+    <div id="survivalMode" class="speedContainer">
+        <div class="gameContainer">
+            <div class="infoRow">
+                <div id="debug" class="infoContainer">
+                    <div class="label">Time left</div>
+                    <div class="value" id="timer">20</div>
+                </div>
+                <div class="infoContainer">
+                    <div class="label">Score</div>
+                    <div class="value" id="score">0</div>
+                </div>
+                <div class="infoContainer">
+                    <div class="label">High</div>
+                    <div class="value" id="highScore">0</div>
+                </div>
+            </div>
+            <div id="survivalGameContainer" class="gameContainer">
+            </div>
+            <div class="infoRow">
+                <div class="restart infoContainer" id="restart">
+                    <div class="label">Restart</div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
+
+
+
     <div id="debugContainer" class="debugContainer">
         <div class="debugTitle">
             Debug
