--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="manifest" href="manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="assets/favicon/ms-icon-144x144.png">
-    <script>navigator.serviceWorker.register("tapGame/service-worker.js")</script>
+    <script>navigator.serviceWorker.register("service-worker.js")</script>
     <meta name="theme-color" content="#ffffff">
 </head>
 
