Max 10 scoreboard and filter by inputType

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
             <div class="label">Back</div>
         </div>
         <div class="scoreboard">
-            <div class="scoreboardTitle">Scoreboard</div>
+            <div class="scoreboardTitle">Top 10 scoreboard</div>
             <div class="scoreboardRowTitle">
                 <div class="scoreboardLabel">Name</div>
                 <div class="scoreboardLabel">Score</div>
             </div>
-            <div class="scoreboardRow">
+            <div class="scoreboardList">
             </div>
         </div>
     </div>
