--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <div id="speedDesc" class="speedSubtitleContainer">
         <h2 clasS="subtitle">Tap only the <span class="greenTitle">green</span>.</h2>
         <h2 class="subtitle">Don't tap the <span class="redTitle">red</span>.</h2>
+        <h2 class="subtitle"><span class="goldTitle">Gold</span> gives you bonus time</h2>
+        <h2 class="subtitle">AVOID <span class="grayTitle">GRAY</span> AT ALL COST</h2>
         <h2 class="subtitle">You have <span class="greenTitle">20</span> seconds.</h2>
     </div>
     <div id="speedMode" class="speedContainer">
