--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
             <div class="scoreboardSubmit"> 
                 <div class="scoreboardLabel">Submit</div>
             </div>
+            <div class="scoreboardShare"> 
+                <div class="scoreboardLabel">Share</div>
+            </div>
         </div>
     </div>
 
@@ -108,7 +111,7 @@
         </div>
     </div>
 </body>
-
+<script src="script/html2canvas.min.js"></script>
 <script type="module" src="script/main.js"></script>
 <script>
     console.log(`%c
