share button first test public

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <div class="scoreboardInputContainer">
         <div class="scoreboardInput">
             <div class="scoreboardInputTitle">Game over!</div>
+            <div class="scoreboardLabel">You scored <span id="scoreboardLabel" class="greenTitle"></span></div>
             <input class="scoreboardInputField" placeholder="Nickname" type="text" id="nameInput">
             <div class="scoreboardSubmit"> 
                 <div class="scoreboardLabel">Submit</div>
